--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,16 @@ compiler:
   - gcc
 
 before_install:
-  - sudo apt-get update -qq
+  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
+  - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
+
+  - sudo apt-get update -qq 
+
+install:
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
   - sudo apt-get install -qq cmake 
 
 before_script:
@@ -13,4 +22,6 @@ before_script:
    - cd build
    - cmake ..
 
-script: make
+script: 
+   - make
+   - $CXX --version
