* Update CI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 install:
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
-  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
+  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.5; fi
   - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
   - sudo apt-get install -qq cmake 
 
@@ -23,5 +23,6 @@ before_script:
    - cmake ..
 
 script: 
-   - make
+   - echo $CXX
    - $CXX --version
+   - make
